--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:S4-NetQuest/react-scorm-provider.git"
+  },
+  "exports": {
+    ".": "./src/lib/index.jsx"
   }
 }
